--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <hr/>
 
 
-    <div class="images">
+    <div class="vinyl">
         <style>
             img {
               display: block;
